org.json import

--- a/CougarArray/pom.xml
+++ b/CougarArray/pom.xml
@@ -15,6 +15,11 @@
 
 
     <dependencies>
-        <!-- Add dependencies here if needed -->
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20250107</version>
+        </dependency>
     </dependencies>
 </project>
