--- a/CougarArray/pom.xml
+++ b/CougarArray/pom.xml
@@ -26,5 +26,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.49.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
     </dependencies>
 </project>
