!= null; fixed error

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ database.sql
 test.txt
 test.txt.enc
 decryptedtest.txt
+CougarArray/demo/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+.vscode/settings.json
+.vscode/settings.json
