--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ decryptedtest.txt
 CougarArray/demo/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 .vscode/settings.json
 .vscode/settings.json
+CougarArray/demo/banana.txt
+CougarArray/demo/banana.txt
