nicer output on formatPrint()

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ CougarArray/demo/target/maven-status/maven-compiler-plugin/compile/default-compi
 .vscode/settings.json
 CougarArray/demo/banana.txt
 CougarArray/demo/banana.txt
+private.txt
