--- a/CougarArray/demo/pom.xml
+++ b/CougarArray/demo/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-          <groupId>com.cougararray</groupId>
-          <artifactId>CougarArray</artifactId>
-          <version>1.0-SNAPSHOT</version>
+        <groupId>com.cougararray</groupId>
+        <artifactId>CougarArray</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.cougararray</groupId>
@@ -16,7 +16,23 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <slf4j.version>2.0.12</slf4j.version>
+        <logback.version>1.5.3</logback.version>
     </properties>
-    
 
+    <dependencies>
+        <!-- SLF4J API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        
+        <!-- Logback implementation (includes SLF4J binding) -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+    </dependencies>
 </project>
